demo/demo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod-second
  labels:
    app: my-app
spec:
  containers:
    - name: my-container
      image: nginx:latest
      ports:
        - containerPort: 80
