demo/demo-with-error.yaml
apiVersion: v1
kind: Pod
metadata:
  name-wrong: my-pod
  labels:
    app: my-app
spec:
  containers:
    - name: my-container
      image: nginx:latest
      ports:
        - containerPort: 80
